<resources>
    <string name="app_name">WeatherApp</string>
    <string name="submit">Submit</string>
    <string name="hint">hint</string>
    <string name="type_in_location">Type in address:</string>
    <string name="map">Map</string>
    <string name="geography">Geography:</string>
    <string name="temperature">Temperature:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="precipitation">Precipitation:</string>
    <string name="humidity">Humidity:</string>
    <string name="map_and_weather">Map and Weather</string>
    <string name="humidVal">%2d</string>
    <string name="windVal">%3d</string>
    <string name="precipVal">%4d</string>
    <string name="tempVal">%1d</string>
    <string name="welcome_to_the_weatherapp">Welcome to the WeatherApp!</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo3">TODO</string>
</resources>
